--- a/index.pug
+++ b/index.pug
@@ -1,8 +1,12 @@
 doctype html
 html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Document
-  body 
+include layout/head
+
+body
+  .container
+    header.header 
+      include layout/header
+    main.main 
+      include layout/main
+    footer.footer 
+      include layout/footer
